src/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE
    MANYLINECOMMENT
    ONELINECOMMENT
    IGNORE
    WHITECHARACTERS

Grammar

Rule 0     S' -> program
Rule 1     program -> start_of_program global_declarations
Rule 2     start_of_program -> <empty>
Rule 3     program -> error
Rule 4     declarations -> empty
Rule 5     declarations -> declaration declarations
Rule 6     declaration -> variable_declaration
Rule 7     declaration -> function_declaration
Rule 8     declaration -> function_definition
Rule 9     global_declarations -> empty
Rule 10    global_declarations -> global_declaration global_declarations
Rule 11    global_declaration -> INCLUDE
Rule 12    global_declaration -> variable_declaration
Rule 13    global_declaration -> function_declaration
Rule 14    global_declaration -> function_definition
Rule 15    variable_declaration -> type many_declarators SEMI
Rule 16    many_declarators -> declarator
Rule 17    many_declarators -> declarator COMMA many_declarators
Rule 18    type -> basic_type maybe_pointer
Rule 19    maybe_pointer -> empty
Rule 20    maybe_pointer -> TIMES maybe_pointer
Rule 21    basic_type -> INTTYPE
Rule 22    basic_type -> CHARTYPE
Rule 23    basic_type -> BOOLTYPE
Rule 24    basic_type -> DOUBLETYPE
Rule 25    identifier -> ID
Rule 26    decl_identifier -> ID
Rule 27    declarator -> decl_identifier
Rule 28    declarator -> decl_identifier LBRACKET constant_expression RBRACKET
Rule 29    function_declaration -> function_with_result_type LPAREN maybe_parameter_list RPAREN SEMI
Rule 30    function_with_result_type -> type ID
Rule 31    function_with_result_type -> VOID ID
Rule 32    maybe_parameter_list -> empty
Rule 33    maybe_parameter_list -> parameter_list
Rule 34    parameter_list -> parameter
Rule 35    parameter_list -> parameter COMMA parameter_list
Rule 36    parameter -> type decl_identifier
Rule 37    parameter -> BYREF type decl_identifier
Rule 38    function_definition -> function_with_result_and_parameters declarations statements RBRACE
Rule 39    function_with_result_and_parameters -> function_with_result_type LPAREN maybe_parameter_list RPAREN LBRACE
Rule 40    new_scope -> <empty>
Rule 41    statements -> empty
Rule 42    statements -> statement statements
Rule 43    statement -> SEMI
Rule 44    statement -> expression SEMI
Rule 45    statement -> LBRACE new_scope statements RBRACE
Rule 46    statement -> IF LPAREN expression RPAREN statement maybe_else
Rule 47    statement -> for_loop LPAREN maybe_expression SEMI maybe_expression SEMI maybe_expression RPAREN statement
Rule 48    statement -> CONTINUE maybe_id SEMI
Rule 49    statement -> BREAK maybe_id SEMI
Rule 50    statement -> RETURN maybe_expression SEMI
Rule 51    for_loop -> FOR
Rule 52    for_loop -> ID COLON FOR
Rule 53    maybe_id -> empty
Rule 54    maybe_id -> identifier
Rule 55    maybe_expression -> empty
Rule 56    maybe_expression -> expression
Rule 57    maybe_else -> empty
Rule 58    maybe_else -> ELSE statement
Rule 59    expression -> identifier
Rule 60    expression -> parenthesial_expression
Rule 61    expression -> constant_value
Rule 62    expression -> function_call
Rule 63    expression -> ufo
Rule 64    expression -> unary_operation
Rule 65    expression -> binary_operation
Rule 66    expression -> left_assignment
Rule 67    expression -> right_assignment
Rule 68    expression -> whole_assignment
Rule 69    expression -> type_casting
Rule 70    expression -> ternary_operation
Rule 71    expression -> new
Rule 72    expression -> delete
Rule 73    new -> NEW type
Rule 74    new -> NEW type LBRACKET expression RBRACKET
Rule 75    soft_new -> NEW basic_type
Rule 76    soft_new -> soft_new TIMES
Rule 77    strict_new -> soft_new LBRACKET expression RBRACKET
Rule 78    maybe_multi_hack -> empty
Rule 79    maybe_multi_hack -> TIMES maybe_expression
Rule 80    maybe_multi_hack -> LBRACKET expression RBRACKET
Rule 81    maybe_multi_hack -> TIMES LBRACKET expression RBRACKET
Rule 82    parenthesial_expression -> LPAREN expression RPAREN
Rule 83    ufo -> expression LBRACKET expression RBRACKET
Rule 84    function_call -> ID LPAREN empty RPAREN
Rule 85    function_call -> function_with_acts expression RPAREN
Rule 86    function_with_acts -> ID LPAREN
Rule 87    function_with_acts -> function_with_acts expression COMMA
Rule 88    expression_list -> expression
Rule 89    expression_list -> expression COMMA expression_list
Rule 90    unary_operation -> ADDRESS expression
Rule 91    unary_operation -> TIMES expression
Rule 92    unary_operation -> PLUS expression
Rule 93    unary_operation -> MINUS expression
Rule 94    unary_operation -> NOT expression
Rule 95    binary_operation -> expression TIMES expression
Rule 96    binary_operation -> expression DIVIDE expression
Rule 97    binary_operation -> expression PLUS expression
Rule 98    binary_operation -> expression MINUS expression
Rule 99    binary_operation -> expression GT expression
Rule 100   binary_operation -> expression LT expression
Rule 101   binary_operation -> expression LE expression
Rule 102   binary_operation -> expression GE expression
Rule 103   binary_operation -> expression EQ expression
Rule 104   binary_operation -> expression NE expression
Rule 105   binary_operation -> expression OR expression
Rule 106   binary_operation -> expression AND expression
Rule 107   binary_operation -> expression COMMA expression
Rule 108   binary_operation -> expression MODULO expression
Rule 109   left_assignment -> INCREMENT expression
Rule 110   left_assignment -> DECREMENT expression
Rule 111   right_assignment -> expression INCREMENT
Rule 112   right_assignment -> expression DECREMENT
Rule 113   whole_assignment -> expression EQUALS expression
Rule 114   whole_assignment -> expression TIMESEQUAL expression
Rule 115   whole_assignment -> expression DIVEQUAL expression
Rule 116   whole_assignment -> expression MODEQUAL expression
Rule 117   whole_assignment -> expression PLUSEQUAL expression
Rule 118   whole_assignment -> expression MINUSEQUAL expression
Rule 119   type_casting -> LPAREN type RPAREN expression
Rule 120   ternary_operation -> expression TERNARY expression COLON expression
Rule 121   delete -> DELETE expression
Rule 122   constant_value -> TRUE
Rule 123   constant_value -> FALSE
Rule 124   constant_value -> NULL
Rule 125   constant_value -> constant_value_int
Rule 126   constant_value -> constant_value_char
Rule 127   constant_value -> constant_value_double
Rule 128   constant_value -> constant_value_string
Rule 129   constant_value_int -> INTEGER
Rule 130   constant_value_double -> DOUBLE
Rule 131   constant_value_char -> CHAR
Rule 132   constant_value_string -> STRING
Rule 133   constant_expression -> expression
Rule 134   empty -> <empty>

Terminals, with rules where they appear

ADDRESS              : 90
AND                  : 106
BOOLTYPE             : 23
BREAK                : 49
BYREF                : 37
CHAR                 : 131
CHARTYPE             : 22
COLON                : 52 120
COMMA                : 17 35 87 89 107
CONTINUE             : 48
DECREMENT            : 110 112
DELETE               : 121
DIVEQUAL             : 115
DIVIDE               : 96
DOUBLE               : 130
DOUBLETYPE           : 24
ELSE                 : 58
EQ                   : 103
EQUALS               : 113
FALSE                : 123
FOR                  : 51 52
GE                   : 102
GT                   : 99
ID                   : 25 26 30 31 52 84 86
IF                   : 46
IGNORE               : 
INCLUDE              : 11
INCREMENT            : 109 111
INTEGER              : 129
INTTYPE              : 21
LBRACE               : 39 45
LBRACKET             : 28 74 77 80 81 83
LE                   : 101
LPAREN               : 29 39 46 47 82 84 86 119
LT                   : 100
MANYLINECOMMENT      : 
MINUS                : 93 98
MINUSEQUAL           : 118
MODEQUAL             : 116
MODULO               : 108
NE                   : 104
NEW                  : 73 74 75
NEWLINE              : 
NOT                  : 94
NULL                 : 124
ONELINECOMMENT       : 
OR                   : 105
PLUS                 : 92 97
PLUSEQUAL            : 117
RBRACE               : 38 45
RBRACKET             : 28 74 77 80 81 83
RETURN               : 50
RPAREN               : 29 39 46 47 82 84 85 119
SEMI                 : 15 29 43 44 47 47 48 49 50
STRING               : 132
TERNARY              : 120
TIMES                : 20 76 79 81 91 95
TIMESEQUAL           : 114
TRUE                 : 122
VOID                 : 31
WHITECHARACTERS      : 
error                : 3

Nonterminals, with rules where they appear

basic_type           : 18 75
binary_operation     : 65
constant_expression  : 28
constant_value       : 61
constant_value_char  : 126
constant_value_double : 127
constant_value_int   : 125
constant_value_string : 128
decl_identifier      : 27 28 36 37
declaration          : 5
declarations         : 5 38
declarator           : 16 17
delete               : 72
empty                : 4 9 19 32 41 53 55 57 78 84
expression           : 44 46 56 74 77 80 81 82 83 83 85 87 88 89 90 91 92 93 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 103 104 104 105 105 106 106 107 107 108 108 109 110 111 112 113 113 114 114 115 115 116 116 117 117 118 118 119 120 120 120 121 133
expression_list      : 89
for_loop             : 47
function_call        : 62
function_declaration : 7 13
function_definition  : 8 14
function_with_acts   : 85 87
function_with_result_and_parameters : 38
function_with_result_type : 29 39
global_declaration   : 10
global_declarations  : 1 10
identifier           : 54 59
left_assignment      : 66
many_declarators     : 15 17
maybe_else           : 46
maybe_expression     : 47 47 47 50 79
maybe_id             : 48 49
maybe_multi_hack     : 
maybe_parameter_list : 29 39
maybe_pointer        : 18 20
new                  : 71
new_scope            : 45
parameter            : 34 35
parameter_list       : 33 35
parenthesial_expression : 60
program              : 0
right_assignment     : 67
soft_new             : 76 77
start_of_program     : 1
statement            : 42 46 47 58
statements           : 38 42 45
strict_new           : 
ternary_operation    : 70
type                 : 15 30 36 37 73 74 119
type_casting         : 69
ufo                  : 63
unary_operation      : 64
variable_declaration : 6 12
whole_assignment     : 68

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . start_of_program global_declarations
    (3) program -> . error
    (2) start_of_program -> .

    error           shift and go to state 3
    INCLUDE         reduce using rule 2 (start_of_program -> .)
    VOID            reduce using rule 2 (start_of_program -> .)
    INTTYPE         reduce using rule 2 (start_of_program -> .)
    CHARTYPE        reduce using rule 2 (start_of_program -> .)
    BOOLTYPE        reduce using rule 2 (start_of_program -> .)
    DOUBLETYPE      reduce using rule 2 (start_of_program -> .)
    $end            reduce using rule 2 (start_of_program -> .)

    program                        shift and go to state 1
    start_of_program               shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> start_of_program . global_declarations
    (9) global_declarations -> . empty
    (10) global_declarations -> . global_declaration global_declarations
    (134) empty -> .
    (11) global_declaration -> . INCLUDE
    (12) global_declaration -> . variable_declaration
    (13) global_declaration -> . function_declaration
    (14) global_declaration -> . function_definition
    (15) variable_declaration -> . type many_declarators SEMI
    (29) function_declaration -> . function_with_result_type LPAREN maybe_parameter_list RPAREN SEMI
    (38) function_definition -> . function_with_result_and_parameters declarations statements RBRACE
    (18) type -> . basic_type maybe_pointer
    (30) function_with_result_type -> . type ID
    (31) function_with_result_type -> . VOID ID
    (39) function_with_result_and_parameters -> . function_with_result_type LPAREN maybe_parameter_list RPAREN LBRACE
    (21) basic_type -> . INTTYPE
    (22) basic_type -> . CHARTYPE
    (23) basic_type -> . BOOLTYPE
    (24) basic_type -> . DOUBLETYPE

    $end            reduce using rule 134 (empty -> .)
    INCLUDE         shift and go to state 13
    VOID            shift and go to state 6
    INTTYPE         shift and go to state 15
    CHARTYPE        shift and go to state 7
    BOOLTYPE        shift and go to state 11
    DOUBLETYPE      shift and go to state 18

    function_with_result_and_parameters shift and go to state 4
    function_definition            shift and go to state 14
    function_declaration           shift and go to state 16
    global_declarations            shift and go to state 9
    basic_type                     shift and go to state 5
    global_declaration             shift and go to state 12
    type                           shift and go to state 17
    variable_declaration           shift and go to state 8
    empty                          shift and go to state 10
    function_with_result_type      shift and go to state 19

state 3

    (3) program -> error .

    $end            reduce using rule 3 (program -> error .)


state 4

    (38) function_definition -> function_with_result_and_parameters . declarations statements RBRACE
    (4) declarations -> . empty
    (5) declarations -> . declaration declarations
    (134) empty -> .
    (6) declaration -> . variable_declaration
    (7) declaration -> . function_declaration
    (8) declaration -> . function_definition
    (15) variable_declaration -> . type many_declarators SEMI
    (29) function_declaration -> . function_with_result_type LPAREN maybe_parameter_list RPAREN SEMI
    (38) function_definition -> . function_with_result_and_parameters declarations statements RBRACE
    (18) type -> . basic_type maybe_pointer
    (30) function_with_result_type -> . type ID
    (31) function_with_result_type -> . VOID ID
    (39) function_with_result_and_parameters -> . function_with_result_type LPAREN maybe_parameter_list RPAREN LBRACE
    (21) basic_type -> . INTTYPE
    (22) basic_type -> . CHARTYPE
    (23) basic_type -> . BOOLTYPE
    (24) basic_type -> . DOUBLETYPE

    SEMI            reduce using rule 134 (empty -> .)
    LBRACE          reduce using rule 134 (empty -> .)
    IF              reduce using rule 134 (empty -> .)
    CONTINUE        reduce using rule 134 (empty -> .)
    BREAK           reduce using rule 134 (empty -> .)
    RETURN          reduce using rule 134 (empty -> .)
    FOR             reduce using rule 134 (empty -> .)
    ID              reduce using rule 134 (empty -> .)
    LPAREN          reduce using rule 134 (empty -> .)
    TRUE            reduce using rule 134 (empty -> .)
    FALSE           reduce using rule 134 (empty -> .)
    NULL            reduce using rule 134 (empty -> .)
    ADDRESS         reduce using rule 134 (empty -> .)
    TIMES           reduce using rule 134 (empty -> .)
    PLUS            reduce using rule 134 (empty -> .)
    MINUS           reduce using rule 134 (empty -> .)
    NOT             reduce using rule 134 (empty -> .)
    INCREMENT       reduce using rule 134 (empty -> .)
    DECREMENT       reduce using rule 134 (empty -> .)
    NEW             reduce using rule 134 (empty -> .)
    DELETE          reduce using rule 134 (empty -> .)
    INTEGER         reduce using rule 134 (empty -> .)
    CHAR            reduce using rule 134 (empty -> .)
    DOUBLE          reduce using rule 134 (empty -> .)
    STRING          reduce using rule 134 (empty -> .)
    RBRACE          reduce using rule 134 (empty -> .)
    VOID            shift and go to state 6
    INTTYPE         shift and go to state 15
    CHARTYPE        shift and go to state 7
    BOOLTYPE        shift and go to state 11
    DOUBLETYPE      shift and go to state 18

    function_with_result_and_parameters shift and go to state 4
    function_definition            shift and go to state 24
    function_declaration           shift and go to state 25
    basic_type                     shift and go to state 5
    declarations                   shift and go to state 20
    function_with_result_type      shift and go to state 19
    declaration                    shift and go to state 23
    type                           shift and go to state 17
    variable_declaration           shift and go to state 21
    empty                          shift and go to state 22

state 5

    (18) type -> basic_type . maybe_pointer
    (19) maybe_pointer -> . empty
    (20) maybe_pointer -> . TIMES maybe_pointer
    (134) empty -> .

    TIMES           shift and go to state 26
    ID              reduce using rule 134 (empty -> .)
    LBRACKET        reduce using rule 134 (empty -> .)
    SEMI            reduce using rule 134 (empty -> .)
    DIVIDE          reduce using rule 134 (empty -> .)
    PLUS            reduce using rule 134 (empty -> .)
    MINUS           reduce using rule 134 (empty -> .)
    GT              reduce using rule 134 (empty -> .)
    LT              reduce using rule 134 (empty -> .)
    LE              reduce using rule 134 (empty -> .)
    GE              reduce using rule 134 (empty -> .)
    EQ              reduce using rule 134 (empty -> .)
    NE              reduce using rule 134 (empty -> .)
    OR              reduce using rule 134 (empty -> .)
    AND             reduce using rule 134 (empty -> .)
    COMMA           reduce using rule 134 (empty -> .)
    MODULO          reduce using rule 134 (empty -> .)
    INCREMENT       reduce using rule 134 (empty -> .)
    DECREMENT       reduce using rule 134 (empty -> .)
    EQUALS          reduce using rule 134 (empty -> .)
    TIMESEQUAL      reduce using rule 134 (empty -> .)
    DIVEQUAL        reduce using rule 134 (empty -> .)
    MODEQUAL        reduce using rule 134 (empty -> .)
    PLUSEQUAL       reduce using rule 134 (empty -> .)
    MINUSEQUAL      reduce using rule 134 (empty -> .)
    TERNARY         reduce using rule 134 (empty -> .)
    RPAREN          reduce using rule 134 (empty -> .)
    RBRACKET        reduce using rule 134 (empty -> .)
    COLON           reduce using rule 134 (empty -> .)

  ! TIMES           [ reduce using rule 134 (empty -> .) ]

    empty                          shift and go to state 27
    maybe_pointer                  shift and go to state 28

state 6

    (31) function_with_result_type -> VOID . ID

    ID              shift and go to state 29


state 7

    (22) basic_type -> CHARTYPE .

    TIMES           reduce using rule 22 (basic_type -> CHARTYPE .)
    LBRACKET        reduce using rule 22 (basic_type -> CHARTYPE .)
    SEMI            reduce using rule 22 (basic_type -> CHARTYPE .)
    DIVIDE          reduce using rule 22 (basic_type -> CHARTYPE .)
    PLUS            reduce using rule 22 (basic_type -> CHARTYPE .)
    MINUS           reduce using rule 22 (basic_type -> CHARTYPE .)
    GT              reduce using rule 22 (basic_type -> CHARTYPE .)
    LT              reduce using rule 22 (basic_type -> CHARTYPE .)
    LE              reduce using rule 22 (basic_type -> CHARTYPE .)
    GE              reduce using rule 22 (basic_type -> CHARTYPE .)
    EQ              reduce using rule 22 (basic_type -> CHARTYPE .)
    NE              reduce using rule 22 (basic_type -> CHARTYPE .)
    OR              reduce using rule 22 (basic_type -> CHARTYPE .)
    AND             reduce using rule 22 (basic_type -> CHARTYPE .)
    COMMA           reduce using rule 22 (basic_type -> CHARTYPE .)
    MODULO          reduce using rule 22 (basic_type -> CHARTYPE .)
    INCREMENT       reduce using rule 22 (basic_type -> CHARTYPE .)
    DECREMENT       reduce using rule 22 (basic_type -> CHARTYPE .)
    EQUALS          reduce using rule 22 (basic_type -> CHARTYPE .)
    TIMESEQUAL      reduce using rule 22 (basic_type -> CHARTYPE .)
    DIVEQUAL        reduce using rule 22 (basic_type -> CHARTYPE .)
    MODEQUAL        reduce using rule 22 (basic_type -> CHARTYPE .)
    PLUSEQUAL       reduce using rule 22 (basic_type -> CHARTYPE .)
    MINUSEQUAL      reduce using rule 22 (basic_type -> CHARTYPE .)
    TERNARY         reduce using rule 22 (basic_type -> CHARTYPE .)
    RPAREN          reduce using rule 22 (basic_type -> CHARTYPE .)
    RBRACKET        reduce using rule 22 (basic_type -> CHARTYPE .)
    COLON           reduce using rule 22 (basic_type -> CHARTYPE .)
    ID              reduce using rule 22 (basic_type -> CHARTYPE .)


state 8

    (12) global_declaration -> variable_declaration .

    INCLUDE         reduce using rule 12 (global_declaration -> variable_declaration .)
    VOID            reduce using rule 12 (global_declaration -> variable_declaration .)
    INTTYPE         reduce using rule 12 (global_declaration -> variable_declaration .)
    CHARTYPE        reduce using rule 12 (global_declaration -> variable_declaration .)
    BOOLTYPE        reduce using rule 12 (global_declaration -> variable_declaration .)
    DOUBLETYPE      reduce using rule 12 (global_declaration -> variable_declaration .)
    $end            reduce using rule 12 (global_declaration -> variable_declaration .)


state 9

    (1) program -> start_of_program global_declarations .

    $end            reduce using rule 1 (program -> start_of_program global_declarations .)


state 10

    (9) global_declarations -> empty .

    $end            reduce using rule 9 (global_declarations -> empty .)


state 11

    (23) basic_type -> BOOLTYPE .

    TIMES           reduce using rule 23 (basic_type -> BOOLTYPE .)
    LBRACKET        reduce using rule 23 (basic_type -> BOOLTYPE .)
    SEMI            reduce using rule 23 (basic_type -> BOOLTYPE .)
    DIVIDE          reduce using rule 23 (basic_type -> BOOLTYPE .)
    PLUS            reduce using rule 23 (basic_type -> BOOLTYPE .)
    MINUS           reduce using rule 23 (basic_type -> BOOLTYPE .)
    GT              reduce using rule 23 (basic_type -> BOOLTYPE .)
    LT              reduce using rule 23 (basic_type -> BOOLTYPE .)
    LE              reduce using rule 23 (basic_type -> BOOLTYPE .)
    GE              reduce using rule 23 (basic_type -> BOOLTYPE .)
    EQ              reduce using rule 23 (basic_type -> BOOLTYPE .)
    NE              reduce using rule 23 (basic_type -> BOOLTYPE .)
    OR              reduce using rule 23 (basic_type -> BOOLTYPE .)
    AND             reduce using rule 23 (basic_type -> BOOLTYPE .)
    COMMA           reduce using rule 23 (basic_type -> BOOLTYPE .)
    MODULO          reduce using rule 23 (basic_type -> BOOLTYPE .)
    INCREMENT       reduce using rule 23 (basic_type -> BOOLTYPE .)
    DECREMENT       reduce using rule 23 (basic_type -> BOOLTYPE .)
    EQUALS          reduce using rule 23 (basic_type -> BOOLTYPE .)
    TIMESEQUAL      reduce using rule 23 (basic_type -> BOOLTYPE .)
    DIVEQUAL        reduce using rule 23 (basic_type -> BOOLTYPE .)
    MODEQUAL        reduce using rule 23 (basic_type -> BOOLTYPE .)
    PLUSEQUAL       reduce using rule 23 (basic_type -> BOOLTYPE .)
    MINUSEQUAL      reduce using rule 23 (basic_type -> BOOLTYPE .)
    TERNARY         reduce using rule 23 (basic_type -> BOOLTYPE .)
    RPAREN          reduce using rule 23 (basic_type -> BOOLTYPE .)
    RBRACKET        reduce using rule 23 (basic_type -> BOOLTYPE .)
    COLON           reduce using rule 23 (basic_type -> BOOLTYPE .)
    ID              reduce using rule 23 (basic_type -> BOOLTYPE .)


state 12

    (10) global_declarations -> global_declaration . global_declarations
    (9) global_declarations -> . empty
    (10) global_declarations -> . global_declaration global_declarations
    (134) empty -> .
    (11) global_declaration -> . INCLUDE
    (12) global_declaration -> . variable_declaration
    (13) global_declaration -> . function_declaration
    (14) global_declaration -> . function_definition
    (15) variable_declaration -> . type many_declarators SEMI
    (29) function_declaration -> . function_with_result_type LPAREN maybe_parameter_list RPAREN SEMI
    (38) function_definition -> . function_with_result_and_parameters declarations statements RBRACE
    (18) type -> . basic_type maybe_pointer
    (30) function_with_result_type -> . type ID
    (31) function_with_result_type -> . VOID ID
    (39) function_with_result_and_parameters -> . function_with_result_type LPAREN maybe_parameter_list RPAREN LBRACE
    (21) basic_type -> . INTTYPE
    (22) basic_type -> . CHARTYPE
    (23) basic_type -> . BOOLTYPE
    (24) basic_type -> . DOUBLETYPE

    $end            reduce using rule 134 (empty -> .)
    INCLUDE         shift and go to state 13
    VOID            shift and go to state 6
    INTTYPE         shift and go to state 15
    CHARTYPE        shift and go to state 7
    BOOLTYPE        shift and go to state 11
    DOUBLETYPE      shift and go to state 18

    function_with_result_and_parameters shift and go to state 4
    function_definition            shift and go to state 14
    function_declaration           shift and go to state 16
    global_declarations            shift and go to state 30
    basic_type                     shift and go to state 5
    function_with_result_type      shift and go to state 19
    global_declaration             shift and go to state 12
    type                           shift and go to state 17
    variable_declaration           shift and go to state 8
    empty                          shift and go to state 10

state 13

    (11) global_declaration -> INCLUDE .

    INCLUDE         reduce using rule 11 (global_declaration -> INCLUDE .)
    VOID            reduce using rule 11 (global_declaration -> INCLUDE .)
    INTTYPE         reduce using rule 11 (global_declaration -> INCLUDE .)
    CHARTYPE        reduce using rule 11 (global_declaration -> INCLUDE .)
    BOOLTYPE        reduce using rule 11 (global_declaration -> INCLUDE .)
    DOUBLETYPE      reduce using rule 11 (global_declaration -> INCLUDE .)
    $end            reduce using rule 11 (global_declaration -> INCLUDE .)


state 14

    (14) global_declaration -> function_definition .

    INCLUDE         reduce using rule 14 (global_declaration -> function_definition .)
    VOID            reduce using rule 14 (global_declaration -> function_definition .)
    INTTYPE         reduce using rule 14 (global_declaration -> function_definition .)
    CHARTYPE        reduce using rule 14 (global_declaration -> function_definition .)
    BOOLTYPE        reduce using rule 14 (global_declaration -> function_definition .)
    DOUBLETYPE      reduce using rule 14 (global_declaration -> function_definition .)
    $end            reduce using rule 14 (global_declaration -> function_definition .)


state 15

    (21) basic_type -> INTTYPE .

    TIMES           reduce using rule 21 (basic_type -> INTTYPE .)
    LBRACKET        reduce using rule 21 (basic_type -> INTTYPE .)
    SEMI            reduce using rule 21 (basic_type -> INTTYPE .)
    DIVIDE          reduce using rule 21 (basic_type -> INTTYPE .)
    PLUS            reduce using rule 21 (basic_type -> INTTYPE .)
    MINUS           reduce using rule 21 (basic_type -> INTTYPE .)
    GT              reduce using rule 21 (basic_type -> INTTYPE .)
    LT              reduce using rule 21 (basic_type -> INTTYPE .)
    LE              reduce using rule 21 (basic_type -> INTTYPE .)
    GE              reduce using rule 21 (basic_type -> INTTYPE .)
    EQ              reduce using rule 21 (basic_type -> INTTYPE .)
    NE              reduce using rule 21 (basic_type -> INTTYPE .)
    OR              reduce using rule 21 (basic_type -> INTTYPE .)
    AND             reduce using rule 21 (basic_type -> INTTYPE .)
    COMMA           reduce using rule 21 (basic_type -> INTTYPE .)
    MODULO          reduce using rule 21 (basic_type -> INTTYPE .)
    INCREMENT       reduce using rule 21 (basic_type -> INTTYPE .)
    DECREMENT       reduce using rule 21 (basic_type -> INTTYPE .)
    EQUALS          reduce using rule 21 (basic_type -> INTTYPE .)
    TIMESEQUAL      reduce using rule 21 (basic_type -> INTTYPE .)
    DIVEQUAL        reduce using rule 21 (basic_type -> INTTYPE .)
    MODEQUAL        reduce using rule 21 (basic_type -> INTTYPE .)
    PLUSEQUAL       reduce using rule 21 (basic_type -> INTTYPE .)
    MINUSEQUAL      reduce using rule 21 (basic_type -> INTTYPE .)
    TERNARY         reduce using rule 21 (basic_type -> INTTYPE .)
    RPAREN          reduce using rule 21 (basic_type -> INTTYPE .)
    RBRACKET        reduce using rule 21 (basic_type -> INTTYPE .)
    COLON           reduce using rule 21 (basic_type -> INTTYPE .)
    ID              reduce using rule 21 (basic_type -> INTTYPE .)


state 16

    (13) global_declaration -> function_declaration .

    INCLUDE         reduce using rule 13 (global_declaration -> function_declaration .)
    VOID            reduce using rule 13 (global_declaration -> function_declaration .)
    INTTYPE         reduce using rule 13 (global_declaration -> function_declaration .)
    CHARTYPE        reduce using rule 13 (global_declaration -> function_declaration .)
    BOOLTYPE        reduce using rule 13 (global_declaration -> function_declaration .)
    DOUBLETYPE      reduce using rule 13 (global_declaration -> function_declaration .)
    $end            reduce using rule 13 (global_declaration -> function_declaration .)


state 17

    (15) variable_declaration -> type . many_declarators SEMI
    (30) function_with_result_type -> type . ID
    (16) many_declarators -> . declarator
    (17) many_declarators -> . declarator COMMA many_declarators
    (27) declarator -> . decl_identifier
    (28) declarator -> . decl_identifier LBRACKET constant_expression RBRACKET
    (26) decl_identifier -> . ID

    ID              shift and go to state 34

    many_declarators               shift and go to state 33
    decl_identifier                shift and go to state 32
    declarator                     shift and go to state 31

state 18

    (24) basic_type -> DOUBLETYPE .

    TIMES           reduce using rule 24 (basic_type -> DOUBLETYPE .)
    LBRACKET        reduce using rule 24 (basic_type -> DOUBLETYPE .)
    SEMI            reduce using rule 24 (basic_type -> DOUBLETYPE .)
    DIVIDE          reduce using rule 24 (basic_type -> DOUBLETYPE .)
    PLUS            reduce using rule 24 (basic_type -> DOUBLETYPE .)
    MINUS           reduce using rule 24 (basic_type -> DOUBLETYPE .)
    GT              reduce using rule 24 (basic_type -> DOUBLETYPE .)
    LT              reduce using rule 24 (basic_type -> DOUBLETYPE .)
    LE              reduce using rule 24 (basic_type -> DOUBLETYPE .)
    GE              reduce using rule 24 (basic_type -> DOUBLETYPE .)
    EQ              reduce using rule 24 (basic_type -> DOUBLETYPE .)
    NE              reduce using rule 24 (basic_type -> DOUBLETYPE .)
    OR              reduce using rule 24 (basic_type -> DOUBLETYPE .)
    AND             reduce using rule 24 (basic_type -> DOUBLETYPE .)
    COMMA           reduce using rule 24 (basic_type -> DOUBLETYPE .)
    MODULO          reduce using rule 24 (basic_type -> DOUBLETYPE .)
    INCREMENT       reduce using rule 24 (basic_type -> DOUBLETYPE .)
    DECREMENT       reduce using rule 24 (basic_type -> DOUBLETYPE .)
    EQUALS          reduce using rule 24 (basic_type -> DOUBLETYPE .)
    TIMESEQUAL      reduce using rule 24 (basic_type -> DOUBLETYPE .)
    DIVEQUAL        reduce using rule 24 (basic_type -> DOUBLETYPE .)
    MODEQUAL        reduce using rule 24 (basic_type -> DOUBLETYPE .)
    PLUSEQUAL       reduce using rule 24 (basic_type -> DOUBLETYPE .)
    MINUSEQUAL      reduce using rule 24 (basic_type -> DOUBLETYPE .)
    TERNARY         reduce using rule 24 (basic_type -> DOUBLETYPE .)
    RPAREN          reduce using rule 24 (basic_type -> DOUBLETYPE .)
    RBRACKET        reduce using rule 24 (basic_type -> DOUBLETYPE .)
    COLON           reduce using rule 24 (basic_type -> DOUBLETYPE .)
    ID              reduce using rule 24 (basic_type -> DOUBLETYPE .)


state 19

    (29) function_declaration -> function_with_result_type . LPAREN maybe_parameter_list RPAREN SEMI
    (39) function_with_result_and_parameters -> function_with_result_type . LPAREN maybe_parameter_list RPAREN LBRACE

    LPAREN          shift and go to state 35


state 20
